# Collections

./: .gitignore  CMakeLists.txt  README.md
include/: ArrayList.h  LinkedList.h  List.h  SearchMethod.h  SortMethod.h  Structs.h
src/: main.cpp
